--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "patouuu",
   "version": "1.0.0",
-  "description": "A Bot",
+  "description": "A Bot for the server PhenixMG",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexandreSama/Patouuu.git"
+  },
   "author": "Alexandre",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AlexandreSama/Patouuu/issues"
+  },
+  "homepage": "https://github.com/AlexandreSama/Patouuu#readme"
 }
