--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@pm2/io": "^5.0.0",
+    "common-tags": "^1.8.2",
     "discord-akairo": "github:Tricked-dev/discord-akairo",
     "discord.js": "^13.3.1",
     "moment": "^2.29.1",
